--- a/references.bib
+++ b/references.bib
@@ -481,3 +481,49 @@
 	note = {Publisher: SAGE Publications Inc},
 	langid = {en}
 }
+
+@book{fisher1925,
+	title = {Statistical methods for research workers, 11th ed. rev},
+	author = {Fisher, R.A.},
+	year = {1925},
+	date = {1925},
+	publisher = {Edinburgh},
+	series = {Statistical methods for research workers, 11th ed. rev},
+	note = {Citation Key: fisher1925},
+	address = {Oliver and Boyd}
+}
+
+@article{neyman1933,
+	title = {On the problem of the most efficient tests of statistical hypotheses},
+	author = {Neyman, Jerzy and Pearson, Egon S.},
+	year = {1933},
+	date = {1933},
+	journal = {Philosophical Transactions of the Royal Society of London A: Mathematical, Physical and Engineering Sciences},
+	pages = {289{\textendash}337},
+	volume = {231},
+	number = {694{\textendash}706},
+	doi = {10.1098/rsta.1933.0009},
+	url = {https://doi.org/10.1098/rsta.1933.0009},
+	note = {Citation Key: neyman1933most}
+}
+
+@article{greenland2016,
+	title = {Statistical tests, P values, confidence intervals, and power: A guide to misinterpretations},
+	author = {Greenland, Sander and Senn, Stephen J. and Rothman, Kenneth J. and Carlin, John B. and Poole, Charles and Goodman, Steven N. and Altman, Douglas G.},
+	year = {2016},
+	date = {2016},
+	journal = {European Journal of Epidemiology},
+	pages = {337--350},
+	volume = {31},
+	doi = {10.1007/s10654-016-0149-3},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4877414/},
+	note = {PMID: 27209009
+PMCID: PMC4877414}
+}
+
+@book{jeffreys1998theory,
+  title={The theory of probability},
+  author={Jeffreys, Harold},
+  year={1998},
+  publisher={OuP Oxford}
+}
